manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: webapp
  name: webapp
spec:
  finalizers:
  - kubernetes
