manifests/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: 203511311076.dkr.ecr.eu-west-1.amazonaws.com/webapp/api:0.0.1
        name: api
        ports:
        - containerPort: 10080
