manifests/api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: webapp
spec:
  ports:
  - port: 10080
    protocol: TCP
    targetPort: 10080
  selector:
    app: api
