manifests/web-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: webapp
spec:
  ports:
  - port: 10080
    protocol: TCP
    targetPort: 10080
  selector:
    app: web
